--- a/src/config/lex-web-ui-loader-config.json
+++ b/src/config/lex-web-ui-loader-config.json
@@ -1,16 +1,16 @@
 {
     "region": "us-west-2",
     "cognito": {
-      "poolId": "us-west-2:4e10320d-ee4f-4113-be3f-9a1251fa330c",
+      "poolId": "us-west-2:5ad87c5e-62bb-4c04-8a9b-db05554a2876",
       "aws_cognito_region": "us-west-2",
       "region": "us-west-2"
     },
     "lex": {
-      "botName": "RobinChatbot",
-      "botAlias": "locale",
+      "botName": "Robin",
+      "botAlias": "devone",
       "initialText": "",
       "initialSpeechInstruction": "Say 'Hey Robin' to get started.",
-      "initialUtterance": "spanish",
+      "initialUtterance": "english",
       "region": "us-west-2",
       "retryOnLexPostTextTimeout": false,
       "retryCountPostTextTimeout": 1,
